cambios en sass

--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,1 +1,1 @@
-@import "variables","main","general","galeria","botones","footer","header","media","mixin";
+@import "variables","main","general","galeria","botones","footer","header","media";
