--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,78 +1,51 @@
-
-.formulario2 {
-  background-color: #6A4520;
-  color: white;
-  width: 70%;
-  
-  margin: 6rem;
-  border-radius: 3rem;
+.formulario {
+  background-color: #D4A373;
+  color: black;
+  width: 60%;
+  margin-top: 4rem;
+  margin: 2rem;
+  border-radius: 0.5rem;
   text-align: start;
-  display: flex-box;
-  
-
+  display: grid;
 }
 
-.formulario2 h1 {
-  color: #D4A373;
+.formulario2 {
+  background-color: #D4A373;
+  color: black;
+  width: 60%;
+  margin-top: 4rem;
+  margin: 2rem;
+  border-radius: 0.5rem;
+  text-align: start;
+  display: grid;
+}
+
+form-control {
+  width: 100%;
+  font-weight: bold;
+  display: flexbox;
+}
+
+.texto-contacto h1 {
+  color: white;
   text-align: center;
   font-size: 1.5;
   margin: auto;
-
 }
-.formulario2 h2{
-  text-align: start;
-  font-size: 1rem;
-  margin: 1rem;
-}
-
-.form-label{
-font-size: 1rem;
-margin: 1rem;
-
-}
-.form-control {
-  width: 90%;
-  font-weight: bold;
-  display: flexbox;
-  background-color: #fff;
-  margin: 1rem;
-
-}
-.aviso{
-  font-size: 1rem;
- margin: 1rem;
-}
-.text{
-width: 85%;
-padding: 1rem;
-margin: 1rem;
-font-size: 1rem;
-margin-top: 2rem;
-}
-.botonenviar {
-
-  margin: 1rem;
-  transition: 0.2s;
-  border-radius: 1rem;
-  font-size: 1rem;
-
-}
-
 
 .map-responsive {
   overflow: hidden;
   position: relative;
   height: 0;
   padding-bottom: 40%;
-
 }
-
 .map-responsive iframe {
+  left: 0;
+  top: 0;
   height: 100%;
   width: 100%;
   position: absolute;
   padding: 1.5rem;
-
 }
 
 .contenedor-box {
@@ -81,7 +54,6 @@ margin-top: 2rem;
   flex-wrap: wrap;
   text-align: center;
 }
-
 .contenedor-box .box img {
   height: 20rem;
   width: 25rem;
@@ -102,7 +74,7 @@ margin-top: 2rem;
   visibility: hidden;
 }
 
-.contenedor-box :hover>.bi {
+.contenedor-box :hover > .bi {
   opacity: 1;
   visibility: visible;
 }
@@ -146,7 +118,6 @@ h1 {
   margin-left: 40%;
   text-align: center;
 }
-
 .preguntas h2 {
   text-align: start;
   font-size: 2rem;
@@ -177,78 +148,61 @@ html {
   width: 5rem;
   height: 20%;
   margin-top: 1.5;
-
 }
-
 .row label {
   margin-top: 1rem;
   margin-left: 1rem;
-  color: #c7c7c7;
+  color: black;
   font-size: 1rem;
-
 }
 
 .row2 {
   margin-top: 1rem;
   display: flex;
-
 }
-
 .row2 img {
   width: 15%;
   height: 10%;
 }
-
 .row2 label {
   margin: 1rem;
   max-width: 80%;
   margin-top: 1rem;
-  font-size: 0.80rem;
-
+  font-size: 0.8rem;
 }
-
-
 
 .colum1 {
   max-width: 400px;
   margin: 1rem;
 }
-
 .colum1 h2 {
   font-size: 1.5rem;
   width: 100%;
 }
-
 .colum1 p {
   font-size: 1rem;
-  color: #c7c7c7;
+  color: black;
   margin-top: 1.5rem;
   width: 90%;
-
-
 }
 
 .colum2 {
   width: 40%;
   margin: 1rem;
 }
-
 .colum2 h2 {
   font-size: 1.5rem;
   width: 100%;
 }
-
 .colum2 row {
   margin-top: 1rem;
   display: flex;
-
 }
 
 .colum3 {
   width: 40%;
   margin: 1rem;
 }
-
 .colum3 h2 {
   font-size: 1.5rem;
   text-align: center;
@@ -260,7 +214,6 @@ html {
   flex-wrap: wrap;
   text-align: center;
 }
-
 .contenedor-box .box img {
   height: 20rem;
   width: 25rem;
@@ -269,7 +222,6 @@ html {
   margin: 2rem;
   text-align: center;
 }
-
 .contenedor-box img {
   line-height: 3rem;
   height: 3rem;
@@ -284,7 +236,6 @@ html {
   transition: all 500ms ease-out;
   position: relative;
 }
-
 .contenedor-box .bi {
   position: relative;
   width: 5rem;
@@ -295,8 +246,7 @@ html {
   opacity: 0;
   visibility: hidden;
 }
-
-.contenedor-box:hover>.bi {
+.contenedor-box:hover > .bi {
   opacity: 1;
   visibility: visible;
 }
@@ -307,7 +257,6 @@ html {
   transition: 0.2s;
   border-radius: 1rem;
 }
-
 .botonenviar:hover {
   height: 2rem;
   width: 20rem;
@@ -327,7 +276,6 @@ html {
   font-size: 1.7rem;
   margin-right: 4rem;
 }
-
 .botonWpp:hover {
   height: 5rem;
   width: 15rem;
@@ -351,13 +299,11 @@ footer {
   width: 100%;
 }
 
-
 .container-footer-all {
   width: 100%;
   max-width: 1000px;
   margin: auto;
   padding: 1.5rem;
-
 }
 
 .container-body {
@@ -382,6 +328,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  display: grid;
   grid-template-rows: auto 1fr auto;
   font-size: 0.92%;
 }
@@ -394,7 +341,6 @@ body {
 .carousel {
   margin: 2rem;
 }
-
 .carousel img {
   height: 100%;
   width: 100%;
@@ -406,17 +352,14 @@ body {
     grid-template-areas: "header header " "main main" "footer footer ";
     grid-template-columns: 100%;
   }
-
   .container-body {
     flex-wrap: wrap;
   }
-
   .colum2,
   .colum3 {
     margin-top: 5%;
   }
 }
-
 @media (min-width: 1024px) {
   .contenedor {
     width: 100%;
