--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,6 +4,7 @@ $color_3: #202020;
 $color_4: #6A4520;
 $color_5: #fff;
 $color_6: #c7c7c7;
+$color_7: #d63031;
 $background-color_1: #D4A373;
 $background-color_2: white;
 $background-color_3: green;
