--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,36 +1,111 @@
 .formulario {
-  background-color: #D4A373;
-  color: black;
-  width: 60%;
-  margin-top: 4rem;
-  margin: 2rem;
-  border-radius: 0.5rem;
-  text-align: start;
-  display: grid;
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1.5rem;
 }
 
-.formulario2 {
-  background-color: #D4A373;
-  color: black;
-  width: 60%;
-  margin-top: 4rem;
-  margin: 2rem;
-  border-radius: 0.5rem;
-  text-align: start;
-  display: grid;
+ul {
+  list-style: none;
+  padding: 0;
 }
 
-form-control {
-  width: 100%;
-  font-weight: bold;
-  display: flexbox;
-}
-
-.texto-contacto h1 {
-  color: white;
+.formulario h1 {
   text-align: center;
-  font-size: 1.5;
-  margin: auto;
+  font-size: 2.5rem;
+  color: #d63031;
+  margin: 2rem;
+}
+
+.contacto {
+  background-color: #D4A373;
+}
+.contacto > * {
+  padding: 1rem;
+}
+
+.texto-contacto h2 {
+  text-align: center;
+  font-size: 2.5rem;
+  color: #d63031;
+}
+
+.contacto-form {
+  background: #D4A373;
+}
+.contacto-form form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.contacto-form form label {
+  display: block;
+}
+.contacto-form form p {
+  margin: 0;
+  padding: 1rem;
+  font-size: 1.5rem;
+}
+.contacto-form form .block {
+  grid-column: 1/3;
+}
+.contacto-form form button {
+  width: 100%;
+  padding: 0.7rem;
+  border: none;
+  background: none;
+  outline: 0;
+  color: white;
+  border-bottom: 1px solid #6A4520;
+  background: #6A4520;
+  border: 0;
+  text-transform: uppercase;
+  padding: 1rem;
+}
+.contacto-form form button:hover {
+  background: #d63031;
+  color: #202020;
+  transition: background-color 1s ease-out;
+  outline: 0;
+}
+.contacto-form form button:focus {
+  background: #D4A373;
+  color: #202020;
+  transition: background-color 1s ease-out;
+  outline: 0;
+}
+.contacto-form form input {
+  width: 100%;
+  padding: 0.7em;
+  border: none;
+  background: none;
+  outline: 0;
+  color: #202020;
+  border-bottom: 1px solid #d63031;
+}
+.contacto-form form textarea {
+  width: 100%;
+  padding: 0.7em;
+  border: none;
+  background: none;
+  outline: 0;
+  color: #202020;
+  border-bottom: 1px solid #d63031;
+}
+
+.contacto-info {
+  background: #6A4520;
+}
+.contacto-info h4 {
+  text-align: center;
+  margin: 0 0 1rem 0;
+  font-size: 2;
+  color: #fff;
+}
+.contacto-info ul {
+  text-align: center;
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
+  color: #fff;
 }
 
 .map-responsive {
@@ -365,6 +440,22 @@ body {
     width: 100%;
     height: 100%;
     grid-template-areas: "header header header" "main main main" "footer footer footer ";
+  }
+}
+@media (min-width: 700px) {
+  body {
+    padding: 0 4rem;
+  }
+  .contacto {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+  .contacto > * {
+    padding: 2rem;
+  }
+  .contacto-info h4,
+  .contacto-info ul {
+    text-align: left;
   }
 }
 
