--- a/css/estilo.css
+++ b/css/estilo.css
@@ -168,12 +168,18 @@ h1 {
   width: 100%;
   margin-top: 10rem;
   background-color: #D4A373;
+  padding: 1.5rem;
 }
 
 .accordion-body {
   background-color: antiquewhite;
   text-align: center;
   margin-top: 3rem;
+  margin: 3rem;
+}
+
+.accordion-collapse {
+  text-align: center;
   font-size: 1.5rem;
 }
 
