--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,13 +1,13 @@
 
 
-footer {
+.footer {
 	background-color: $background-color_8;
 	color: $color_2;
 	width: 100%;
 }
 .container-footer-all {
 	width: 100%;
-	max-width: 1000px;
+	max-width: 1400px;
 	margin: auto;
 	padding: 1.5rem;
 }
@@ -19,7 +19,7 @@ footer {
 .footer {
 	display: flex;
 	justify-content: space-between;
-	max-width: 1200px;
-	margin: auto;
-	padding: 2rem;
+	max-width: 1400px;
+	margin:auto;
+	padding: 3rem;
 }
