--- a/css/estilo.css
+++ b/css/estilo.css
@@ -226,30 +226,30 @@ html {
 }
 
 .row img {
-  width: 5rem;
+  width: 4rem;
   height: 20%;
-  margin-top: 1.5;
+  margin-top: 1.5rem;
 }
 .row label {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   margin-left: 1rem;
   color: #fff;
   font-size: 1rem;
 }
 
 .row2 {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
   display: flex;
 }
 .row2 img {
-  width: 15%;
-  height: 10%;
+  width: 3rem;
+  height: 20%;
 }
 .row2 label {
-  margin: 1rem;
-  max-width: 80%;
+  margin: 1.5rem;
+  max-width: 1200%;
   margin-top: 1rem;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
 }
 
 .colum1 {
@@ -264,7 +264,7 @@ html {
   font-size: 1rem;
   color: #fff;
   margin-top: 1.5rem;
-  width: 90%;
+  width: 60%;
 }
 
 .colum2 {
@@ -281,12 +281,12 @@ html {
 }
 
 .colum3 {
-  width: 40%;
+  width: 50%;
   margin: 1rem;
 }
 .colum3 h2 {
   font-size: 1.5rem;
-  text-align: center;
+  text-align: start;
 }
 
 .contenedor-box {
@@ -374,7 +374,7 @@ html {
   margin: 1rem;
 }
 
-.footer {
+footer {
   background-color: #202020;
   color: white;
   width: 100%;
@@ -382,7 +382,7 @@ html {
 
 .container-footer-all {
   width: 100%;
-  max-width: 1400px;
+  max-width: 1200px;
   margin: auto;
   padding: 1.5rem;
 }
@@ -390,14 +390,6 @@ html {
 .container-body {
   display: flex;
   justify-content: space-between;
-}
-
-.footer {
-  display: flex;
-  justify-content: space-between;
-  max-width: 1400px;
-  margin: auto;
-  padding: 3rem;
 }
 
 body {
@@ -445,13 +437,10 @@ body {
   .contenedor {
     width: 100%;
     height: 100%;
-    grid-template-areas: "header header header" "main main main" "footer footer footer ";
+    grid-template-areas: "header header header" "main main main" "footer footer footer  ";
   }
 }
 @media (min-width: 700px) {
-  body {
-    padding: 0 4rem;
-  }
   .contacto {
     display: grid;
     grid-template-columns: 2fr 1fr;
