--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -9,29 +9,29 @@
 
 .row {
 	img {
-		width: 5rem;
+		width: 4rem;
 		height: 20%;
-		margin-top: 1.5;
+		margin-top: 1.5rem;
 	}
 	label {
-		margin-top: 1rem;
+		margin-top: 1.5rem;
 		margin-left: 1rem;
 		color: $color_5;
 		font-size: 1rem;
 	}
 }
 .row2 {
-	margin-top: 1rem;
+	margin-top: 1.5rem;
 	display: flex;
 	img {
-		width: 15%;
-		height: 10%;
+		width: 3rem;
+		height: 20%;
 	}
 	label {
-		margin: 1rem;
-		max-width: 80%;
+		margin: 1.5rem;
+		max-width: 1200%;
 		margin-top: 1rem;
-		font-size: 0.80rem;
+		font-size: 0.90rem;
 	}
 }
 .colum1 {
@@ -45,7 +45,7 @@
 		font-size: 1rem;
 		color: $color_5;
 		margin-top: 1.5rem;
-		width: 90%;
+		width: 60%;
 	}
 }
 .colum2 {
@@ -61,11 +61,11 @@
 	}
 }
 .colum3 {
-	width: 40%;
+	width: 50%;
 	margin: 1rem;
 	h2 {
 		font-size: 1.5rem;
-		text-align: center;
+		text-align: start;
 	}
 }
 
