--- a/css/estilo.css
+++ b/css/estilo.css
@@ -185,16 +185,18 @@ h1 {
 
 .contenedor-texto h2 {
   font-size: 3rem;
-  margin: 3rem;
+  margin: 5rem 2rem 5rem;
   left: 0;
   top: 0;
   text-align: center;
   text-decoration: none;
 }
 .contenedor-texto p {
-  font-size: 1.5rem;
-  margin: 3rem;
+  font-size: 2rem;
+  margin: 7.5rem;
   text-align: center;
+  top: 0;
+  left: 0;
 }
 
 .preguntas {
@@ -229,8 +231,8 @@ html {
 }
 
 .row img {
-  width: 4rem;
-  height: 20%;
+  width: 3rem;
+  height: 65%;
   margin-top: 1.5rem;
 }
 .row label {
@@ -258,16 +260,9 @@ html {
 .colum1 {
   max-width: 400px;
   margin: 1rem;
-}
-.colum1 h2 {
-  font-size: 1.5rem;
-  width: 100%;
-}
-.colum1 p {
   font-size: 1rem;
-  color: #fff;
-  margin-top: 1.5rem;
-  width: 60%;
+  width: 100%;
+  margin-top: 1rem;
 }
 
 .colum2 {
@@ -299,23 +294,15 @@ html {
   text-align: center;
 }
 .contenedor-box .box img {
+  line-height: 3rem;
+  text-align: center;
+  border-radius: 50%;
+  background-color: #D4A373;
   height: 20rem;
   width: 25rem;
-  background-color: #101010;
   border-radius: 1rem;
   margin: 2rem;
   text-align: center;
-}
-.contenedor-box img {
-  line-height: 3rem;
-  height: 3rem;
-  width: 3rem;
-  text-align: center;
-  border-radius: 50%;
-  color: #fff;
-  background-color: #6A4520;
-  font-size: 2rem;
-  margin: 1rem 0;
   box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.5);
   transition: all 500ms ease-out;
   position: relative;
