--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -185,16 +185,18 @@ font-size: 1.5rem;
 .contenedor-texto {
 	h2 {
 		font-size: 3rem;
-		margin: 3rem;
+		margin: 5rem 2rem 5rem;
 		left: 0;
 		top: 0;
 		text-align: center;
 		text-decoration: none;
 	}
 	p {
-		font-size: 1.5rem;
-		margin: 3rem;
+		font-size: 2rem;
+		margin: 7.5rem;
 		text-align: center;
+		top: 0;
+		left: 0;
 	}
 }
 
